[package]
name = "slinger"                                              #改这个
version = "0.2.7"
edition = "2021"
description = "An HTTP Client for Rust designed for hackers."
homepage = "https://github.com/emo-crab/slinger"
repository = "https://github.com/emo-crab/slinger"
authors = ["Kali-Team <root@kali-team.cn>"]
readme = "README.md"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3


[dependencies]
thiserror = "2"
http = { version = "1.1.0" }
percent-encoding = "2.1"
socket2 = "0.6.0"
bytes = "1.6.1"
base64 = "0.22"
flate2 = { version = "1.0", default-features = false, features = ["default"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
http-serde = { version = "2.1.0", optional = true }
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3.17", optional = true }
cookie = { version = "0.18.1", optional = true }
tokio-rustls = { version = "0.26.2", optional = true, features = ["ring", "tls12"], default-features = false }
tokio = { version = "1", default-features = false, features = ["net", "io-util", "time"] }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1.1.0", features = ["alloc"], optional = true }
schemars = { version = "1.0.3", optional = true, features = ["bytes1"] }
[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3.31" }
serde_json = "1"
[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile", "rustls-pki-types"]
cookie = ["dep:cookie"]
charset = ["dep:encoding_rs", "dep:mime"]
serde = ["dep:serde", "http-serde"]
gzip = ["flate2"]
schema = ["dep:schemars", "serde"]