[workspace]
resolver = "2"
members = [
    "crates/slinger",
    "crates/slinger-mitm",
]

[workspace.package]
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]
license = "GPL-3.0-only"
repository = "https://github.com/emo-crab/slinger"
homepage = "https://github.com/emo-crab/slinger"

[workspace.dependencies]
# Shared dependencies
thiserror = "2"
http = "1.3.1"
socket2 = "0.6.1"
bytes = "1.6.1"
tracing = "0.1"
tokio = { version = "1", default-features = false }
tokio-rustls = { version = "0.26.4", features = ["ring", "tls12"], default-features = false }
rustls-pemfile = "2"
rustls-pki-types = { version = "1.1.0", features = ["alloc"] }
rustls-native-certs = "0.8"
slinger = { path = "crates/slinger", version = "0.2.12" }

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
